Make A Lot of Design Fixes At The Same Time (#56)
* Make Adding Supplement to be Red
* Make source be labelled correctly
* Make Productivity Page input not look like complete crap

--- a/assets/css/special.css
+++ b/assets/css/special.css
@@ -32,3 +32,16 @@
   color: darkred;
   text-align: center;
 }
+
+.true-icon{
+  color: darkgreen;
+  text-align: center;
+}
+
+.badge .badge-success {
+  text-align: center;
+}
+
+.center-source {
+  text-align: center;
+}
